--- a/.kamaji.conf
+++ b/.kamaji.conf
@@ -1,3 +1,5 @@
 working-folder Working
 baseline-folder Testing
-verbosity-level quiet
+verbosity-level light
+
+data-filename-list generateMarkdownTocLinksFor_exercise.input.md
