wordsNotKnown.bash revamp to use predefined known words in separate files.

--- a/.wordsNotKnown.conf
+++ b/.wordsNotKnown.conf
@@ -1,134 +1,12 @@
-BGIndex
-Bugus
-Cluelessness
-Config
-Cxx
-DName
-DSpec
-Dat
-Documen
-Dolinár
-Doxy
-FGIndex
-FList
-FName
-FSpec
-Fortran
-Hocevar
-Hps
-IFSWas
-Indx
-Javascript
-Kif
-PARAMeter
-Rexpression
-Sublicensing
-Toc
-Usr
-Valu
-Whitespace
-XTerm
-XVilka
-al
-alnum
-aspell
-bak
-bashrc
-boolean
-builtins
-cd
-chmod
-conf
-copyrightable
-copytogarbage
-ctlseqs
-dats
-deletable
-dev
-dirname
-dname
-dont
-doxygen
-doxygenfilterforbashtocxx
-dspec
-dumpage
-echoandexecute
-echodatstampedfspec
-echogarbagedspec
-echoincolor
-echoincolorblue
-echoincolorgreen
-echoincolorgreenbold
-echoincolorred
-echoincolorredbold
-echoincolorwhite
-echoincolorwhitebold
-echoincoloryellow
-echolocalarchivenamefor
-echorelativepath
-elif
-endcode
-endfunction
-endif
-endline
-eq
-esac
-eval
-fi
-flogisoft
-fname
-fsf
-fspec
-ge
-generatemarkdowntoclinksfor
-github
-hardcode
-hardcoding
-html
-http
-https
-ifndef
-installholmespunsoftware
-lc
-le
-lgpl
-licensors
-ln
-lt
-mecho
-movetogarbage
-multimarkdown
-mv
-myfile
-ne
-noncommercially
-od
-parsers
-pathname
-preprocess
-printf
-pwd
-ra
-readonly
-relicensing
-repo
-sam
-sedsubstituteeachfile
-sp
-spitn
-ssef
-stackoverflow
-sublicenses
-txt
-uint
-umask
-unparsed
-uptime
-uptimer
-usr
-whereholmespunlibrarybashing
-whitespace
-wordsnotknown
-wtfpl
-www
-zoy
+/wordsNotKnownBefore.bash.text
+/wordsNotKnownBefore.c++.text
+/wordsNotKnownBefore.cpp.text
+/wordsNotKnownBefore.doxygen.text
+/wordsNotKnownBefore.english.text
+/wordsNotKnownBefore.holmespun.text
+/wordsNotKnownBefore.latin.text
+/wordsNotKnownBefore.linux.text
+/wordsNotKnownBefore.miscellany.text
+/wordsNotKnownBefore.www.text
+
+.knownWordsLocally.text
