Complete local spellcheck.

--- a/.wordsNotKnown.conf
+++ b/.wordsNotKnown.conf
@@ -6,6 +6,7 @@
 /wordsNotKnownBefore.holmespun.text
 /wordsNotKnownBefore.latin.text
 /wordsNotKnownBefore.linux.text
+/wordsNotKnownBefore.make.text
 /wordsNotKnownBefore.miscellany.text
 /wordsNotKnownBefore.www.text
 
