wordsNotKnown configuration revamp

--- a/.wordsNotKnown.conf
+++ b/.wordsNotKnown.conf
@@ -1,13 +1,13 @@
-/wordsNotKnownBefore.bash.text
-/wordsNotKnownBefore.c++.text
-/wordsNotKnownBefore.cpp.text
-/wordsNotKnownBefore.doxygen.text
-/wordsNotKnownBefore.english.text
-/wordsNotKnownBefore.holmespun.text
-/wordsNotKnownBefore.latin.text
-/wordsNotKnownBefore.linux.text
-/wordsNotKnownBefore.make.text
-/wordsNotKnownBefore.miscellany.text
-/wordsNotKnownBefore.www.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.bash.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.c++.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.cpp.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.doxygen.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.english.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.holmespun.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.latin.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.linux.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.make.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.miscellany.text
+$(whereHolmespunLibraryBashing)/wordsNotKnownBefore.www.text
 
 .knownWordsLocally.text
